<resources>
    <string name="app_name">FunctionTest</string>
    <string name="action_settings">Settings</string>
    <string name="btnSamplePage">Sample Page</string>
    <string name="labelPrinter">Printer :</string>
    <string name="btnCut"> Cut </string>
    <string name="btnFeed">Feed</string>
    <string name="btnPrint">Print</string>
    <string name="labelCustomerDisplay">Customer Display :</string>
    <string name="tfTextForPrint">Enter text for print .</string>
    <string name="btnBacklight">Backlight \n On/Off</string>
    <string name="btnReset">Reset</string>
    <string name="btnDspText">Display Text</string>
    <string name="labelCashDrawer">Cash Drawer :</string>
    <string name="btnOpenCashdrawer">Open</string>
    <string name="tfDisplayText">Enter text for display .</string>
    <string name="labelMsr">MSR/ID Card :</string>
    <string name="tfMsr">(active the \'Text Box\' below, then run your vip card through the MSR/ID Card Reader)</string>
    <string name="labelLedTest">LED Indicator :</string>
    <string name="labelPrinterLED">Printer LED</string>
    <string name="labelErrorLED">Error LED</string>
    <string name="labelCashDrawerStatuePin">Status (Pin3)</string>
    <string name="btnCashDrawerOpen">open (pin5)</string>
    <string name="btnCashDrawerPin2">Open (pin2)</string>
    <string name="radioMsrKeyboardMode">keyboard Mode</string>
    <string name="radioMsrBroadcastMode">Broadcast Mode</string>
    <string name="btnMsrClearText">Clear</string>
    <string name="btnPrinterStatus">Status</string>
    <string name="btnPrinterSelfTestPage">Self Test Page</string>
    <string name="str_led_text">120.50</string>
    <string name="btn_show_price">Price</string>
    <string name="btn_show_total">Total</string>
    <string name="btn_show_pay">Pay</string>
    <string name="btn_show_change">Change</string>
    <string name="btn_led_clear">Clear</string>
    <string name="btn_custdsp_clear">Clear</string>
    <string name="btn_custdsp_displayimage">Display \n Image</string>

    <string name="port">Port</string>
    <string name="baudrate">Baudrate</string>
    <string name="open">Open</string>
    <string name="exit">Exit</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="info_send">"send : "</string>
    <string name="info_receive">receive :</string>
    <string name="text_mode">Text</string>
    <string name="hex_mode">Hex</string>

    <string name="cardOpen">Open</string>
    <string name="cardExit">Exit</string>
    <string name="findS50Card">Detect Card</string>
    <string name="s50">S50</string>
    <string name="s70">S70</string>
    <string name="hello_world">Hello world!</string>
    <string name="ul">Ultralight</string>
    <string name="readID">Read SN</string>
    <string name="halt">Halt</string>
    <string name="loadKey">Authentication</string>
    <string name="readBlock">Read Block</string>
    <string name="writeBlock">Write Block</string>
    <string name="readSector">Read Sector</string>
    <string name="writeSector">Write Sector</string>
    <string name="incValue">Increment</string>
    <string name="decValue">Decrement</string>
    <string name="read_block_value">Read Value</string>
    <string name="blockInit">Initval Value</string>
    <string name="title_activity_load_key">LoadKeyActivity</string>
    <string name="keyA">Key A</string>
    <string name="keyType">Key Type:</string>
    <string name="keyB">Key B</string>
    <string name="key">Key:</string>
    <string name="back">Back</string>
    <string name="defaultKey">FF FF FF FF FF FF</string>
    <string name="sectorNo">Sector Number:</string>
    <string name="controlbits">Access Control</string>
    <string name="defAccesControl">FF 07 80 69</string>
    <string name="encrypt">Sector Encrypt</string>
    <string name="reset_device">Reset</string>
    <string name="beep">Beep</string>

    <string name="dialog_title">ERROR</string>
    <string name="ic_card_test">IC Card \n Test</string>
    <string name="id_card_test">MSR/ID \n Card Test</string>
    <string name="ic_card_back">Back</string>

    <string name="speaker_start">Play</string>
    <string name="speaker_stop">Stop</string>
    <string name="speaker_volume">Volume:</string>
    <string name="touch_test">Touch Test</string>
    <string name="screen_display_test">Display Test</string>

    <string name="touch_test_tip">Click the touch screen test button to enter the test page,
        click anywhere on the screen,\n The screen will respond to the color dot,
        the number of clicks will automatically increase</string>

    <string name="display_test_tip">Click the display test button to enter the test page, \n click
        the screen form, the color of the table will change</string>

    <string name="sector_number">Sector number:</string>
    <string name="block_number">Block number:</string>
    <string name="block_value">Value:</string>

    <string name="serial_send_data">Transmitted data</string>
    <string name="serial_receive_data">Received data</string>

</resources>
