<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="10">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorAccent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ic_card_navigate_height"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="8">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_ic_card_back"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/ic_card_back"
                    android:textSize="@dimen/btn_text_size" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/tv_ic_open"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/cardOpen"
                    android:textSize="@dimen/btn_text_size" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/tv_ic_reset"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/reset_device"
                    android:textSize="@dimen/btn_text_size" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/tv_ic_beep"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/beep"
                    android:textSize="@dimen/btn_text_size" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/tv_ic_find_card"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/findS50Card"
                    android:textSize="@dimen/btn_text_size" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/tv_ic_get_cardId"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/readID"
                    android:textSize="@dimen/btn_text_size" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/tv_ic_load_key"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/loadKey"
                    android:textSize="@dimen/btn_text_size" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_ic_read_block"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/readBlock"
                    android:textSize="@dimen/btn_text_size" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/tv_ic_write_block"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/writeBlock"
                    android:textSize="@dimen/btn_text_size" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/tv_ic_init_value"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/blockInit"
                    android:textSize="@dimen/btn_text_size" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/tv_ic_inc_value"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/incValue"
                    android:textSize="@dimen/btn_text_size" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/tv_ic_dec_value"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/decValue"
                    android:textSize="@dimen/btn_text_size" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/tv_ic_get_value"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/read_block_value"
                    android:textSize="@dimen/btn_text_size" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_ic_encrypt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/encrypt"
                    android:textSize="@dimen/btn_text_size"
                    android:visibility="visible" />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <EditText
        android:id="@+id/et_ic_log"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:focusable="false"
        android:theme="@style/MyEditText"
        android:focusableInTouchMode="false"
        android:gravity="top|left"
        android:inputType="none">

        <requestFocus />
    </EditText>

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:visibility="visible" />

</LinearLayout>
